--- a/views/admin/adminLogin.ejs
+++ b/views/admin/adminLogin.ejs
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Log in | Admin | Binbooks</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="icon" type="image/x-icon" href="/images/Fevicon.png">
 </head>
 <body class="bg-[#F2F2F2] ">
     <header class="bg-[#5E8E99] w-full h-24 flex items-center justify-center absolute top-0 ">
