--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -1,4 +1,13 @@
-<%-include("../partials/user/head.ejs")%>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Binbooks</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        <link rel="icon" type="image/x-icon" href="/images/Fevicon.png">
+    </head>
 <link rel="stylesheet" href="/css/user/home.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <body class="bg-[#F2F2F2]  flex flex-col h-screen">
