--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -43,8 +43,8 @@
     <div class="lg:hidden flex-grow">
     </div>
     <div class="px-2 py-2 border-t-[.1px] border-t-[#666666] lg:hidden">
-        <label for="loginPhoneSubmit" class="w-full  " >
-            <label for="loginPhoneSubmit" class="w-full py-1 text-white rounded-md font-semibold bg-[#C0C0C0] justify-center items-center">
+        <label for="loginPhoneSubmit" class="w-full flex justify-center items-center " >
+            <label for="loginPhoneSubmit" class="w-full py-1 flex  text-white rounded-md font-semibold bg-[#565656] justify-center items-center">
                 Continue
             </label>
         </label>
