--- a/views/user/wishList.ejs
+++ b/views/user/wishList.ejs
@@ -43,9 +43,9 @@
                                         <a href="/user/wishlist/remove/<%-data._id %>" class="w-1/2 flex justify-center items-center lg:ml-3 lg:w-fit lg:px-6 text-black border-[#DAA520] border-[.1px] py-1 rounded-md font-semibold">
                                             Remove
                                         </a>
-                                        <button class="w-1/2 lg:w-fit lg:px-6 bg-[#DAA520] py-1 rounded-md font-semibold">
+                                        <a href="/user/product/<%= encodeURIComponent(data._id)%>" class="w-1/2 lg:w-fit lg:px-6 bg-[#DAA520] py-1 rounded-md font-semibold">
                                             Buy now
-                                        </button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
