--- a/views/user/buynow.ejs
+++ b/views/user/buynow.ejs
@@ -92,8 +92,8 @@
             </form>
         </div>
     </main>
-    <div class="flex-grow lg:flex-grow-0"></div>
-    <div class="px-3 lg:px-52 lg:my-7 
+   
+    <div class="px-3 lg:px-52 lg:my-7 lg:block  lg:static  fixed bottom-0 flex justify-center items-center w-full
     ">
         <label for="submit"  class="bg-[#DAA520] mb-2 text-white font-semibold py-[6px] rounded-lg w-full text-center cursor-pointer flex flex-col ">Confirm Address</button>
     </div>
