--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -51,9 +51,8 @@ input:-webkit-autofill {
             </div>
         
     </main>
-    <div class="lg:hidden flex-grow">
-    </div>
-    <div class="px-2 py-2 border-t-[.1px] border-t-[#666666] lg:hidden">
+   
+    <div class="px-2 py-2 border-t-[.1px] border-t-[#666666] lg:hidden   fixed bottom-0 flex justify-center items-center w-full">
         <div  class="w-full  " >
             <label for="loginPhoneSubmit" class="flex justify-center items-center w-full py-1 text-white rounded-md font-semibold bg-[#565656]">
                 Continue
