--- a/views/user/loginpswd.ejs
+++ b/views/user/loginpswd.ejs
@@ -60,9 +60,8 @@ input:-webkit-autofill {
             </div>
         
     </main>
-    <div class="lg:hidden flex-grow">
-    </div>
-    <div class="px-2 py-2 border-t-[.1px] border-t-[#666666] lg:hidden">
+    
+    <div class="px-2 py-2 border-t-[.1px] border-t-[#666666] lg:hidden  fixed bottom-0 flex justify-center items-center w-full">
         <div for="loginPhoneSubmit" class="w-full  " >
             <label for="loginPhoneSubmit" class="w-full py-1 cursor-pointer text-white rounded-md font-semibold bg-[#565656] flex justify-center items-center">
                 Continue
