--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -40,9 +40,8 @@
             </div>
         
     </main>
-    <div class="lg:hidden flex-grow">
-    </div>
-    <div class="px-2 py-2 border-t-[.1px] border-t-[#666666] lg:hidden">
+    
+    <div class="px-2 py-2 border-t-[.1px] border-t-[#666666] lg:hidden  fixed bottom-0 flex justify-center items-center w-full">
         <label for="loginPhoneSubmit" class="w-full flex justify-center items-center " >
             <label for="loginPhoneSubmit" class="w-full py-1 flex  text-white rounded-md font-semibold bg-[#565656] justify-center items-center">
                 Continue
