--- a/views/user/payment.ejs
+++ b/views/user/payment.ejs
@@ -73,8 +73,8 @@
             </form>
         </div>
     </main>
-    <div class="flex-grow"></div>
-    <div class="px-3  lg:px-52">
+
+    <div class="px-3  lg:px-52  lg:block lg:mt-5 lg:static  fixed bottom-0 flex justify-center items-center w-full">
         <label for="submit"  class="bg-[#DAA520] mb-2 text-white font-semibold py-[6px] rounded-lg w-full text-center cursor-pointer flex flex-col ">Confirm </button>
     </div>
     
